// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

// =========================
// Modelo mínimo (3 tabelas)
// =========================

Table emenda_principal {
  id_emenda varchar [primary key]
  id_plano_acao varchar [not null, note: "Chave de rastreabilidade / ligação com Plano de Ação"]

  nome_parlamentar_autor varchar [not null]
  codigo_unico_emenda varchar [not null]

  valor_total_alocado decimal [not null]

  cnpj_orgao_beneficiario varchar [not null]
  uf_aplicacao varchar [not null]
  nome_programa_orcamentario varchar [not null]
}

Table execucao_planejamento {
  id_executor varchar [primary key]
  id_emenda varchar [not null]

  nome_executor varchar [not null]
  objeto_detalhado text [not null]
  finalidade_politica_publica text [not null]
  descricao_metas text

  data_inicio_prevista date
  data_fim_prevista date
  status_plano_trabalho varchar

  dados_conta_especifica text
}

Table fluxo_financeiro_e_evidencias {
  id_rastreabilidade varchar [primary key]
  id_emenda varchar [not null]

  numero_empenho varchar
  numero_documento_habil varchar
  numero_ordem_pagamento_bancaria varchar

  status_financeiro_atual varchar
  valor_efetivamente_executado decimal

  status_prestacao_contas varchar
  processo_licitatorio_vinculado varchar
  processo_administrativo varchar
  data_ultima_atualizacao timestamp
}

Ref emenda_execucao: execucao_planejamento.id_emenda > emenda_principal.id_emenda // many-to-one
Ref emenda_fluxo: fluxo_financeiro_e_evidencias.id_emenda > emenda_principal.id_emenda // many-to-one

// ==================================================
// Extensão normalizada (listas como tabelas filhas)
// ==================================================

Table plano_acao {
  id_plano_acao varchar [primary key]
  programa varchar
  situacao_plano_acao varchar

  cnpj_beneficiario varchar
  nome_beneficiario varchar
  uf_beneficiario varchar
  codigo_ibge varchar
  idh varchar
}

Table cronograma_etapa {
  id_etapa varchar [primary key]
  id_executor varchar [not null]

  etapa varchar [not null]
  inicio date
  fim date
  status varchar
}

Table trilha_financeira_evento {
  id_evento varchar [primary key]
  id_rastreabilidade varchar [not null]

  data date
  evento varchar
  documento varchar
  valor decimal
  situacao varchar
}

Table evidencia {
  id_evidencia varchar [primary key]
  id_rastreabilidade varchar [not null]

  tipo varchar
  descricao varchar
  referencia varchar
  data date
}

Ref plano_emenda: emenda_principal.id_plano_acao > plano_acao.id_plano_acao // many-to-one
Ref execucao_cronograma: cronograma_etapa.id_executor > execucao_planejamento.id_executor // many-to-one
Ref fluxo_trilha: trilha_financeira_evento.id_rastreabilidade > fluxo_financeiro_e_evidencias.id_rastreabilidade // many-to-one
Ref fluxo_evidencia: evidencia.id_rastreabilidade > fluxo_financeiro_e_evidencias.id_rastreabilidade // many-to-one


